test: don't use /tmp for now in testing

--- a/brush-shell/tests/cases/builtins/cd.yaml
+++ b/brush-shell/tests/cases/builtins/cd.yaml
@@ -8,8 +8,8 @@ cases:
       echo $?
       echo "pwd: $PWD"
 
-      echo "cd tmp"
-      cd tmp
+      echo "cd usr"
+      cd usr
       echo $?
       echo "pwd: $PWD"
 
