--- a/brush-shell/tests/cases/extended_tests.yaml
+++ b/brush-shell/tests/cases/extended_tests.yaml
@@ -184,9 +184,10 @@ cases:
     stdin: |
       regex="^$"
 
-      [[ "" =~ ''         ]] && echo "1. Matched"
+      # TODO: The commented out lines appear differ in behavior between versions of bash.
+      # [[ "" =~ ''         ]] && echo "1. Matched"
       [[ "" =~ '^$'       ]] && echo "2. Matched"
-      [[ "" =~ ""         ]] && echo "3. Matched"
+      # [[ "" =~ ""         ]] && echo "3. Matched"
       [[ "" =~ "^$"       ]] && echo "4. Matched"
       [[ "" =~ ^$         ]] && echo "5. Matched"
       [[ "" =~ ${regex}   ]] && echo "6. Matched"
