--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -139,17 +139,29 @@ jobs:
           # Needed to make sure cargo-deny is correctly cached.
           cache-all-crates: true
 
+      - name: Install cargo-nextest
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-nextest
+
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2
         with:
           tool: cargo-llvm-cov
 
-      - name: "Install recent bash for tests (macos)"
-        if: ${{ matrix.host == 'macos-latest' }}
+      - name: Set up Homebrew
+        id: set-up-homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+        with:
+          stable: true
+
+      - name: "Install recent bash for tests"
         run: |
           brew install bash
           BASH_PATH="$(brew --prefix bash)/bin/bash"
           echo "Using bash from: ${BASH_PATH}"
+          echo "bash version:"
+          ${BASH_PATH} --version
           echo "BASH_PATH=${BASH_PATH}">>$GITHUB_ENV
 
       - name: Test
@@ -162,27 +174,13 @@ jobs:
 
           # Run the tests
           result=0
-          RUSTC_BOOTSTRAP=1 cargo test --workspace -- -Z unstable-options --format junit >raw-test-output.txt 2>test-errors.txt || result=$?
-
-          # Dump any errors to stdout
-          if [[ -f test-errors.txt ]]; then
-            cat test-errors.txt
-          fi
+          cargo nextest run --workspace --no-fail-fast || result=$?
 
           # Generate code coverage report
           cargo llvm-cov report --cobertura --output-path ./codecov-${{ matrix.variant }}.xml || result=$?
 
-          # Process raw test output
-          if [[ -f raw-test-output.txt ]]; then
-              n=1
-              while IFS= read -r line
-              do
-                if [[ ${line} == "<?xml"* ]]; then
-                  ((n++))
-                fi
-                echo "${line}" >>"test-results-${{ matrix.variant }}-${n}.xml"
-              done <raw-test-output.txt
-          fi
+          # Rename test results.
+          mv target/nextest/default/test-results.xml ./test-results-${{ matrix.variant }}.xml
 
           # Report the actual test results
           exit ${result}
