--- a/brush-shell/tests/cases/builtins/alias.yaml
+++ b/brush-shell/tests/cases/builtins/alias.yaml
@@ -1,21 +1,16 @@
 name: "Builtins: alias"
 cases:
   - name: "Basic alias usage"
-    args: ["-i"]
-    env:
-      PS1: "$ "
-    ignore_stderr: true
     stdin: |
+      shopt -s expand_aliases
       alias myalias=echo
       alias
       myalias 'hello'
 
   - name: "Alias referencing to alias"
     known_failure: true
-    args: ["-i"]
-    env:
-      PS1: "$ "
     stdin: |
+      shopt -s expand_aliases
       alias myalias=echo
       alias outeralias=myalias
       outeralias 'hello'
