--- a/brush-shell/tests/cases/builtins/unset.yaml
+++ b/brush-shell/tests/cases/builtins/unset.yaml
@@ -48,7 +48,7 @@ cases:
       declare -p myarray
 
   - name: "Unset array element with interesting expression"
-    known_failure: true
+    known_failure: true # TODO: case needs implementing
     stdin: |
       declare -a myarray=(a b c d e)
 
