--- a/brush-shell/tests/cases/options.yaml
+++ b/brush-shell/tests/cases/options.yaml
@@ -5,7 +5,7 @@ cases:
       echo "Default options: $-"
 
   - name: "set -a"
-    known_failure: true
+    known_failure: true # TODO: set -a not implemented
     stdin: |
       unexported=original
       set -a
