feat: experimentally enable reedline as an input backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     },
     "rust-analyzer.check.command": "clippy",
     "rewrap.wrappingColumn": 90,
-    "rust-analyzer.cargo.features": "all",
-    "rust-analyzer.debug.openDebugPane": true
+    "rust-analyzer.debug.openDebugPane": true,
+    "rust-analyzer.testExplorer": true,
+    "rust-analyzer.check.features": "all"
 }
