--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -15,7 +15,9 @@ rust-version.workspace = true
 bench = false
 
 [features]
+default = ["basic"]
 basic = []
+reedline = ["dep:reedline", "dep:nu-ansi-term"]
 rustyline = ["dep:rustyline"]
 
 [lints]
@@ -25,6 +27,8 @@ workspace = true
 async-trait = "0.1.83"
 brush-parser = { version = "^0.2.8", path = "../brush-parser" }
 brush-core = { version = "^0.2.10", path = "../brush-core" }
+nu-ansi-term = { version = "0.50.1", optional = true }
+reedline = { version = "0.35.0", optional = true }
 rustyline = { package = "brush-rustyline-fork", version = "14.0.1", optional = true, features = [
     "derive",
 ] }
