--- a/brush-shell/tests/cases/redirection.yaml
+++ b/brush-shell/tests/cases/redirection.yaml
@@ -53,6 +53,7 @@ cases:
       cat < <(echo hi)
 
   - name: "Process substitution: output redirection"
+    skip: true # TODO: Test is flaky; needs work.
     stdin: |
       shopt -u -o posix
       echo hi > >(wc -l)
