fix: deduplicate completion candidates

--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -25,6 +25,7 @@ cfg-if = "1.0.0"
 clap = { version = "4.5.17", features = ["derive", "wrap_help"] }
 fancy-regex = "0.13.0"
 futures = "0.3.30"
+indexmap = "2.6.0"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
 rand = "0.8.5"
