--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -45,6 +45,7 @@ git-version = "0.3.9"
 lazy_static = "1.5.0"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+human-panic = "2.0.1"
 
 [target.'cfg(not(any(windows, unix)))'.dependencies]
 brush-interactive = { version = "^0.2.10", path = "../brush-interactive", features = [
