build: leave rustyline disabled by default

--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -26,7 +26,7 @@ name = "brush-interactive-tests"
 path = "tests/interactive_tests.rs"
 
 [features]
-default = ["basic", "reedline", "rustyline"]
+default = ["basic", "reedline"]
 basic = []
 reedline = []
 rustyline = []
