fix: assorted completion issues with ~ and vars

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -2,6 +2,7 @@
 retries = 3
 status-level = "slow"
 slow-timeout = { period = "5s", terminate-after = 3, grace-period = "2s" }
+fail-fast = false
 
 [profile.default.junit]
 path = "test-results.xml"
