--- a/brush-shell/tests/cases/builtins/printf.yaml
+++ b/brush-shell/tests/cases/builtins/printf.yaml
@@ -22,3 +22,14 @@ cases:
   - name: "printf with -v as a format arg"
     stdin: |
       printf "%s\n" "-v"
+
+  - name: "printf %q"
+    stdin: |
+      echo "[1]"
+      printf "%q" 'TEXT'; echo
+
+      echo "[2]"
+      printf "%q" '$VAR'; echo
+
+      echo "[3]"
+      printf "%q" '"'; echo
