--- a/brush-shell/tests/cases/extended_tests.yaml
+++ b/brush-shell/tests/cases/extended_tests.yaml
@@ -135,6 +135,12 @@ cases:
       [[ "abc" == "a*" ]] && echo "1. Matches"
       [[ "abc" != "a*" ]] && echo "2. Matches"
 
+  - name: "Tilde binary string matching"
+    known_failure: true
+    stdin: |
+      x='~/'
+      [[ $x == ~* ]] && echo "1. Matches"
+
   - name: "Arithmetic extended tests"
     stdin: |
       [[ 0 -eq 0 ]] && echo "1. Pass"
