test(builtins): test for `cd -`

--- a/brush-shell/tests/cases/builtins/cd.yaml
+++ b/brush-shell/tests/cases/builtins/cd.yaml
@@ -28,3 +28,16 @@ cases:
       cd file
       echo $?
       ls -1
+
+  - name: "cd -"
+    ignore_stderr: true
+    stdin: |
+      cd /
+      echo "pwd: $PWD"
+      cd usr
+      echo "pwd: $PWD"
+      echo "oldpwd: $OLDPWD"
+      cd -
+      echo $?
+      echo "pwd: $PWD"
+
