fix: slight compat improvements to set -x

--- a/brush-shell/tests/cases/options.yaml
+++ b/brush-shell/tests/cases/options.yaml
@@ -39,9 +39,8 @@ cases:
         echo "Math checks"
       fi
 
-      # TODO: Re-enable these
-      # var=" "
-      # [[ ${var} && ! ${var//[[:space:]]/} ]]
+      var="x"
+      [[ ${var} && ${var//[[:space:]]/} ]]
 
       for ((i = 0; i < 3; i++)); do
         echo $i
