fix: handle expansion in here documents

--- a/brush-shell/tests/cases/builtins/alias.yaml
+++ b/brush-shell/tests/cases/builtins/alias.yaml
@@ -7,10 +7,27 @@ cases:
       alias
       myalias 'hello'
 
-  - name: "Alias referencing to alias"
+  - name: "Alias with trailing space"
     known_failure: true
+    stdin: |
+      shopt -s expand_aliases
+      alias cmd='echo '
+      alias other='replaced '
+      alias otherother='also-replaced'
+
+      cmd other otherother
+
+  - name: "Alias referencing to alias"
+    known_failure: true # Issue #57
     stdin: |
       shopt -s expand_aliases
       alias myalias=echo
       alias outeralias=myalias
       outeralias 'hello'
+
+  - name: "Alias to keywords"
+    known_failure: true
+    stdin: |
+      shopt -s expand_aliases
+      alias myalias=if
+      myalias true; then echo "true"; fi
