--- a/brush-shell/tests/cases/here.yaml
+++ b/brush-shell/tests/cases/here.yaml
@@ -12,9 +12,16 @@ cases:
     args: ["./script.sh"]
 
   - name: "Here doc with expansions"
-    known_failure: true # TODO: needs triage and debugging
     stdin: |
       cat <<END-MARKER
+      Something here...
+      ...and here.
+      $(echo "This is after")
+      END-MARKER
+
+  - name: "Here doc with expansions but quoted tag"
+    stdin: |
+      cat <<"END-MARKER"
       Something here...
       ...and here.
       $(echo "This is after")
