fix: allow usually-operator chars in regex parens

--- a/brush-shell/tests/cases/extended_tests.yaml
+++ b/brush-shell/tests/cases/extended_tests.yaml
@@ -215,6 +215,11 @@ cases:
         echo "Matches"
       fi
 
+  - name: "Regex with special chars in parens"
+    stdin: |
+      [[ "<" =~ (<) ]] && echo "1. Matched"
+      [[ ">" =~ (<) ]] && echo "2. Matched"
+
   - name: "Empty and space checks"
     stdin: |
       check() {
