--- a/brush-shell/tests/cases/builtins/printf.yaml
+++ b/brush-shell/tests/cases/builtins/printf.yaml
@@ -33,3 +33,14 @@ cases:
 
       echo "[3]"
       printf "%q" '"'; echo
+
+  - name: "printf ~%q"
+    stdin: |
+      echo "[1]"
+      printf "~%q" 'TEXT'; echo
+
+      echo "[2]"
+      printf "~%q" '$VAR'; echo
+
+      echo "[3]"
+      printf "~%q" '"'; echo
