--- a/brush-shell/tests/cases/word_expansion.yaml
+++ b/brush-shell/tests/cases/word_expansion.yaml
@@ -856,31 +856,80 @@ cases:
       echo "\${arr@a}: ${arr@a}"
 
   - name: "Expansion with curly braces"
-    known_failure: true # Issue #42
     stdin: |
-      echo "{a,b}:"
+      echo "{a,b} =>"
       echo {a,b}
+      echo
 
-      echo "{}:"
+      echo "{a} =>"
+      echo {a}
+      echo
+
+      echo "{a} =>"
+      echo {a}
+      echo
+
+      echo "a{,}b =>"
+      echo a{,}b
+      echo
+
+      echo "{} =>"
       echo {}
+      echo
 
-      echo "1{a,b}2"
+      echo "1{a,b}2 =>"
       echo 1{a,b}2
+      echo
 
-      echo "{a,b}{1,2}"
+      echo "1{a,b}2{c,d}3 =>"
+      echo 1{a,b}2{c,d}3
+      echo
+
+      echo "{a,b}{1,2} =>"
       echo {a,b}{1,2}
+      echo
 
-      echo "{a..f}"
+      echo "{a..f} =>"
       echo {a..f}
+      echo
 
-      echo "{a..f..2}"
+      echo "{a..f..2} =>"
       echo {a..f..2}
+      echo
 
-      echo "{2..9}"
+      echo "{2..9} =>"
       echo {2..9}
+      echo
 
-      echo "{2..9..2}"
+      echo "{2..9..2} =>"
       echo {2..9..2}
+      echo
+
+      echo "W{{1..3},a,x}Y =>"
+      echo W{{1..3},a,x}Y
+      echo
+
+      echo 'W\{1,2}X =>'
+      echo W\{1,2}X
+      echo
+
+      echo 'W{1,2\}X =>'
+      echo W{1,2\}X
+      echo
+
+      echo '"W{1,2}X" =>'
+      echo "W{1,2}X"
+      echo
+
+      var=value
+      bar=other
+      echo '{$var,$ba}r =>'
+      echo {$va,$ba}r
+      echo
+
+      echo '\${a,b} =>'
+      echo \${a,b}
+      echo
 
   - name: "Iterate through modified array"
     stdin: |
