feat(builtins): implement more of kill builtin

--- a/brush-shell/tests/cases/builtins/kill.yaml
+++ b/brush-shell/tests/cases/builtins/kill.yaml
@@ -14,4 +14,14 @@ cases:
       kill -l SIGHUP
       kill -l EXIT
 
+  - name: "kill -s"
+    stdin: |
+      kill -s USR1 $$
 
+  - name: "kill -n"
+    stdin: |
+      kill -n 9 $$
+
+  - name: "kill -sigspec"
+    stdin: |
+      kill -USR1 $$
