--- a/brush-shell/tests/cases/builtins/jobs.yaml
+++ b/brush-shell/tests/cases/builtins/jobs.yaml
@@ -2,6 +2,7 @@ name: "Builtins: job-related builtins"
 cases:
   - name: "Basic async job"
     stdin: |
+      set +m
       echo hi &
       wait
       jobs
