fix(builtins): do not interpret --help in command builtin command args (#355)

--- a/brush-shell/tests/cases/builtins/command.yaml
+++ b/brush-shell/tests/cases/builtins/command.yaml
@@ -49,3 +49,11 @@ cases:
 
       command -V non-existent || echo "1. Not found"
       command -V /usr/bin/non-existent || echo "2. Not found"
+
+  - name: "command with --"
+    stdin: |
+      command -- ls
+
+  - name: "command with --help"
+    stdin: |
+      command ls --help
